--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', sans-serif;
 }
 :root {
-    --text-color: #FFFFFF;
+    --text-color: #fbfbfb;
     --icon-color: #ACACBE;
     --icon-hover-bg: #5b5e71;
     --placeholder-color: #cccccc;
@@ -20,9 +20,9 @@
     --icon-color: #a9a9bc;
     --icon-hover-bg: #f1f1f3;
     --placeholder-color: #9f9f9f;
-    --outgoing-chat-bg: #ffffff;
+    --outgoing-chat-bg: #fbfbfb;
     --incoming-chat-bg: #f7f7f8;
-    --outgoing-chat-border: #FFFFFF;
+    --outgoing-chat-border: #fbfbfb;
     --incoming-chat-border: #d9d9e3;
 }
 body {
@@ -73,7 +73,7 @@ body {
     color: var(--icon-color);
     visibility: hidden;
 }
-.chat:hover .chat-content span {
+.chat:hover .chat-content:not(:has(.typing-animation)) span {
     visibility: visible;
 }
 .chat .chat-details {
@@ -97,6 +97,7 @@ span.material-symbols-rounded {
     cursor: pointer;
 }
 
+/* Typing dots animation */
 .typing-animation {
     display: inline-flex;
     padding-left: 25px;
